--- a/sudoku/css/app.css
+++ b/sudoku/css/app.css
@@ -1,27 +1,28 @@
-table.sudoku {
+[data-uber-sudoku] {
   border: 1px solid #000000;
   display: inline-block;
 }
-table.sudoku td {
+[data-uber-sudoku] td {
   width: 44px;
   height: 44px;
   border: 1px solid #000000;
 }
 
-table.sudoku input[type=text] {
+[data-uber-sudoku] input[type=text] {
   border: 0;
   width: 44px;
   height: 44px;
   text-align: center;
   font-size: 24px;
 }
-table.sudoku input[type=text]:focus {
+[data-uber-sudoku] input[type=text]:focus {
   outline: 0;
 }
-table.sudoku input[type=text].error {
+[data-uber-sudoku] input[type=text].error,
+[data-uber-sudoku] table.error input[type=text] {
   background-color: #E57373;
 }
-table.sudoku input[type=text].success {
+[data-uber-sudoku] input[type=text].success {
   background-color: #81C784;
 }
 
