--- a/sudoku/css/app.css
+++ b/sudoku/css/app.css
@@ -3,17 +3,15 @@
   display: inline-block;
 }
 [data-ub-sudoku] td {
-  width: 44px;
-  height: 44px;
   border: 1px solid #000000;
 }
 
 [data-ub-sudoku] input[type=text] {
   border: 0;
-  width: 44px;
-  height: 44px;
+  width: 24px;
+  height: 24px;
   text-align: center;
-  font-size: 24px;
+  font-size: 18px;
 }
 [data-ub-sudoku] input[type=text]:focus {
   outline: 0;
@@ -45,4 +43,12 @@
 }
 .page-index .validate-btn:hover {
   background-color: #9E9E9E;
+}
+
+@media all and (min-width: 768px) {
+  [data-ub-sudoku] input[type=text] {
+    width: 44px;
+    height: 44px;
+    font-size: 24px;
+  }
 }
