--- a/sudoku/css/index.css
+++ b/sudoku/css/index.css
@@ -28,6 +28,12 @@
   right: auto;
   bottom: auto;
   top: 100px;
+  opacity: 0;
+  -webkit-transition: opacity 300ms;
+  transition: opacity 300ms;
+}
+.page-index .success-gif.show {
+  opacity: 1;
 }
 
 @media all and (min-width: 768px) {
