style: don't show the gif until class `show` is added

--- a/sudoku/static/css/index.css
+++ b/sudoku/static/css/index.css
@@ -35,6 +35,7 @@
 .page-index .success-gif {
   border-radius: 3px;
   width: 100%;
+  opacity: 0;
 }
 .page-index .success-gif.show {
   -webkit-animation: gifShow 300ms both;
