--- a/sudoku/static/css/ub-sudoku.css
+++ b/sudoku/static/css/ub-sudoku.css
@@ -13,10 +13,12 @@
   text-align: center;
   font-size: 18px;
   background-color: #f6f1ea;
-  -webkit-animation: inputIn 300ms both;
-  animation: inputIn 300ms both;
   -moz-appearance: textfield;
   -ms-appearance: textfield;
+}
+[data-ub-sudoku] input[type=number].in {
+  -webkit-animation: inputIn 300ms both;
+  animation: inputIn 300ms both;
 }
 [data-ub-sudoku] input[type=number]:focus {
   outline: 0;
