--- a/sudoku/static/css/base.css
+++ b/sudoku/static/css/base.css
@@ -95,12 +95,14 @@ body {
   top: auto;
   right: auto;
   bottom: -100px;
+  opacity: 0;
   left: 12px;
-  -webkit-transition: bottom 200ms;
-  transition: bottom 200ms;
+  -webkit-transition: bottom 200ms, opacity 200ms;
+  transition: bottom 200ms, opacity 200ms;
 }
 .toast.show {
   bottom: 12px;
+  opacity: 1;
 }
 .toast .message {
   display: inline-block;
