--- a/sudoku/static/css/base.css
+++ b/sudoku/static/css/base.css
@@ -7,6 +7,18 @@ body {
   padding: 0;
 }
 
+.no-select {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  /* No support for these yet, use at own risk */
+  -o-user-select: none;
+  user-select: none;
+  /* prevent tap highlight color/shadow */
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+  -webkit-touch-callout: none;
+}
+
 /* BUTTON */
 .btn {
   display: block;
