--- a/sudoku/static/css/base.css
+++ b/sudoku/static/css/base.css
@@ -5,6 +5,7 @@ body {
   background-color: #f6f1ea;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .no-select {
@@ -41,7 +42,7 @@ body {
   opacity: 0.8;
   cursor: default;
 }
-.btn:hover:not([disabled]) {
+html.no-touch .btn:hover:not([disabled]) {
   background-color: #9e9e9e;
 }
 
@@ -124,12 +125,13 @@ body {
   position: absolute;
   right: 15px;
   top: 12px;
-  padding: 3px 8px;
+  padding: 0 4px;
+  font-size: 22px;
   color: #90a4ae;
   -webkit-transition: color 200ms;
   transition: color 200ms;
 }
-.toast .close:hover {
+html.no-touch .toast .close:hover {
   color: #607d8b;
 }
 
